# soii--labs

./: README.md
h-p-cpp-hope-programming-cpp-manugcr/: CMakeLists.txt  Consigna.md  Doxyfile  Pipeline.cmake  README.md  sonar-project.properties
h-p-cpp-hope-programming-cpp-manugcr/CMake/: FindRocksDB.cmake
h-p-cpp-hope-programming-cpp-manugcr/html/: login.html  modif_form.html  modify.html  root.html
h-p-cpp-hope-programming-cpp-manugcr/include/: client.hpp  server.hpp
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/: CMakeLists.txt  Doxyfile  INSTALL.md  README.md
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/include/: cannyEdgeFilter.hpp  imageFileOperations.hpp  satelliteImageWrapper.hpp
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/src/: cannyEdgeFilter.cpp  imageFileOperations.cpp  main.cpp  satelliteImageWrapper.cpp
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/tests/: CMakeLists.txt
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/tests/E2E/: EndToEndTesting.cpp
h-p-cpp-hope-programming-cpp-manugcr/lib/cannyEdgeFilter/tests/unit/: no_max_sup_test.cpp
h-p-cpp-hope-programming-cpp-manugcr/lib/libdyn/: CMakeLists.txt
h-p-cpp-hope-programming-cpp-manugcr/lib/libdyn/include/: emergency.hpp
h-p-cpp-hope-programming-cpp-manugcr/lib/libdyn/src/: emergency.cpp
h-p-cpp-hope-programming-cpp-manugcr/lib/libsta/: CMakeLists.txt
h-p-cpp-hope-programming-cpp-manugcr/lib/libsta/include/: alerts.hpp  supplies.hpp
h-p-cpp-hope-programming-cpp-manugcr/lib/libsta/src/: alerts.cpp  supplies.cpp
h-p-cpp-hope-programming-cpp-manugcr/scripts/: build.sh  coverage.sh  launch_ipv4.sh  launch_ipv6.sh
h-p-cpp-hope-programming-cpp-manugcr/src/: client.cpp  server.cpp
h-p-cpp-hope-programming-cpp-manugcr/tests/: CMakeLists.txt
h-p-cpp-hope-programming-cpp-manugcr/tests/unit/: test_unit.cpp
lab1_-manugcr/: CMakeLists.txt  Consigna.md  Pipeline.cmake  README.md  compose.yaml  sonar-project.properties
lab1_-manugcr/docs/: Doxyfile
lab1_-manugcr/include/: client.h  logic.h  server.h
lab1_-manugcr/lib/libdyn/: CMakeLists.txt
lab1_-manugcr/lib/libdyn/include/: alerts.h  supplies.h
lab1_-manugcr/lib/libdyn/src/: alerts.c  supplies.c
lab1_-manugcr/lib/libsta/: CMakeLists.txt
lab1_-manugcr/lib/libsta/include/: emergency.h
lab1_-manugcr/lib/libsta/src/: emergency.c
lab1_-manugcr/scripts/: RUN_CLIENTS.sh  RUN_COVERAGE.sh  RUN_LAB.sh  RUN_REPORTS.sh
lab1_-manugcr/src/: client.c  logic.c  server.c
lab1_-manugcr/tests/: CMakeLists.txt
lab1_-manugcr/tests/unit/: test_unit.c
newworld-manugcr/: Consigna.md  Dockerfile  README.md  build.sh  docker-compose.yaml  go.mod  go.sum
newworld-manugcr/cmd/: main.go
newworld-manugcr/docs/: docs.go  swagger.json  swagger.yaml
newworld-manugcr/internal/controllers/: admin_controller.go  offer_controller.go  user_controller.go
newworld-manugcr/internal/database/: database.go
newworld-manugcr/internal/middleware/: jwt.go
newworld-manugcr/internal/models/: checkout.go  dashboard.go  offer.go  order.go  response.go  user.go
newworld-manugcr/internal/repositories/: admin_repository.go  offer_repository.go  user_repository.go
newworld-manugcr/internal/routes/: routes.go
newworld-manugcr/internal/services/: admin_service.go  offer_service.go  user_service.go
